# CDS-DS-561

./: .gitignore  README.md  generate-content.py  main.py  pyproject.toml  requirements.txt
assignment-10/: .gitignore  README.md  deployment.yml  pyproject.toml
assignment-10/http-client/: requirements.txt
assignment-10/sub-client/: main.py
assignment-10/web-server/: main.py  requirements.txt
assignment-2/: .gitignore  README.md
assignment-3/: README.md  pyproject.toml
assignment-3/app1/: deploy.sh  main.py  requirements.txt
assignment-3/app2/: ds561-amahr-7687738fe441.json  main.py
assignment-4/: .gitignore  README.md  pyproject.toml
assignment-4/app/: main.py
assignment-4/scripts/: bash_vars.sh  create_everything.sh  delete_everything.sh  vm_startup.sh
assignment-5/: README.md  pyproject.toml
assignment-5/app/: main.py
assignment-5/scripts/: bash_vars.sh  create_everything.sh  delete_everything.sh  vm_startup.sh
assignment-6/: .gitignore  README.md  pyproject.toml
assignment-6/app/: main.py  requirements.txt
assignment-6/scripts/: bash_vars.sh  create_everything.sh  delete_everything.sh  vm_startup.sh
assignment-7/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.sh
assignment-7/outputs/dataflow-buckets/: results.txt-00000-of-00002  results.txt-00001-of-00002
assignment-7/outputs/local-buckets/: results.txt
assignment-7/outputs/local-local/: output.txt-00000-of-00001
assignment-8/: README.md  http-client.py  pyproject.toml  requirements.txt
assignment-8/app/: main.py
assignment-8/scripts/: bash_vars.sh  create_everything.sh  delete_everything.sh  vm1_startup.sh  vm2_startup.sh
assignment-9/: README.md  pyproject.toml
assignment-9/app/: Dockerfile  requirements.txt
assignment-9/http-client/: http-client.py  requirements.txt
assignment-9/scripts/: create_everything.sh
assignment-9/scripts/utils/: bash_vars.sh  deploy_container_build.sh  submit_container_build.sh
assignment-9/sub-client/: main.py
