[tool.poetry]
name = "assignment-6"
version = "0.1.0"
description = ""
authors = ["Alicja Mahr <bmahr@bu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
numpy = "^1.26.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"